--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
+    "sass": "^1.32.13",
+    "sass-loader": "^11.1.1",
     "webpack": "^5.37.0",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
